# mf2py

./: .gitignore  .gitmodules  .hgignore  .travis.yml  404.html  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  Procfile  README.md  dumpout.py  example.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: tests.yml
changelog/: index.html
doc/source/: conf.py  index.rst
docs/: changelog.md  index.md  parser.md
docs/stylesheets/: styles.css
mf2py/: __init__.py  backcompat.py  datetime_helpers.py  dom_addins.py  dom_helpers.py  http_server.py  implied_properties.py  metaformats.py  mf2_classes.py  mf_helpers.py  parse_property.py  parser.py  temp_fixes.py  value_class_pattern.py  version.py
mf2py/backcompat-rules/: hentry.json  hfeed.json  hproduct.json  hrecipe.json  hresume.json  hreview-aggregate.json  hreview.json  vcard.json  vevent.json
parser/: index.html
search/: search_index.json
test/: test_dom_addins.py  test_metaformats.py  test_parser.py  test_suite.py
test/examples/: #events.html#  .#events.html  area.html  backcompat.html  backcompat_hentry_with_rel_tag.html  backcompat_hproduct_hreview_nested.html  backcompat_ignore_mf1_root_if_mf2_present.html  backcompat_nested_mf1_in_mf2.html  backcompat_nested_mf2_in_mf1.html  backcompat_no_implied_properties_mf1_root.html  base.html  blocked_roots.html  broken_url.html  class_names_format.html  class_names_pattern.html  complex_e_content.html  datetimes.html  embedded.html  empty.html  eras.html  festivus.html  filter_roots.html  filter_roots_custom.html  hcard_with_empty_url.html  hfeed_on_html_tag.html  img_with_alt.html  img_with_srcset.html  img_with_srcset_with_base.html  implied_properties.html  implied_relative_datetimes.html  language.html  link-rel-minimal.html  link_with_u-url.html  metaformats_html_meta.html  metaformats_ogp.html  metaformats_twitter.html  nested_complex_values.html  nested_hcards.html  nested_multiple_classnames.html  nested_values.html  (+23 more)
test/examples/backcompat/: feed_with_rel_bookmark.html  hentry.html  (+13 more)
(+13 files in other folders)
