[tool.poetry]
name = "mf2py"
version = "1.1.2"
description = "Python Microformats2 parser"
authors = ["Tom Morris <tom@tommorris.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~2.7 || >=3.6"
html5lib = "^1.1"
requests = "^2.27.1"
BeautifulSoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
lxml = "^4.7.1"
mock = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
