[tool.poetry]
name = "mf2py"
version = "1.1.3"
description = "Microformats parser"
authors = ["Tom Morris <tom@tommorris.org>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML"
]

[tool.poetry.dependencies]
python = ">=3.7"
html5lib = "^1.1"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
lxml = "^4.9.2"
mock = "^5.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"