[tool.poetry]
name = "mf2py"
version = "2.0.1"
description = "Microformats parser"
readme = "README.md"
authors = ["Tom Morris <tom@tommorris.org>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML"
]

[tool.poetry.dependencies]
python = ">=3.8"
html5lib = "^1.1"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
lxml = "^4.9.2"
pytest = "^7.2.1"
black = "^23.3.0"
isort = "^5.12.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
